@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: November 19, 2007</p>
+      <p>Last Updated: November 20, 2007</p>
     </td>
   </tr>
 </table>
@@ -693,6 +693,7 @@ Other memory:
 
 	* Add strcat() and strncat()
 	* Integrated uIP micro webserver
+	* Corrected a serious bug in TCP queue management
 </pre></ul>
 
 <table width ="100%">
