@@ -232,4 +232,5 @@
 
 	* Add strcat() and strncat()
 	* Integrated uIP micro webserver
+	* Corrected a serious bug in TCP queue management
 
